--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,8 @@ $colorSumupBlue:    #00a5df;
 
 * { @include box-sizing(border-box) }
 
+*[data-sr] { opacity: 0 }
+
 html,
 body {
   margin: 0;
@@ -46,7 +48,7 @@ body > svg { display: none }
   position: relative;
   top: 45%;
   max-width: 680px;
-  padding: 0 3em;
+  padding: 0 2em;
   margin: 0 auto;
 }
 
@@ -56,8 +58,8 @@ body > svg { display: none }
 }
 
 .picture {
-  opacity: 0;
-  @include animation(slideDown .5s cubic-bezier(.4,.0,.2,1) forwards);
+  // opacity: 0;
+  // @include animation(slideDown .5s cubic-bezier(.4,.0,.2,1) forwards);
   width: 160px;
   margin: 0 auto 2.5em;
 
@@ -72,8 +74,8 @@ body > svg { display: none }
 }
 
 .description {
-  opacity: 0;
-  @include animation(slideUp .5s cubic-bezier(.4,.0,.2,1) forwards);
+  // opacity: 0;
+  // @include animation(slideUp .5s cubic-bezier(.4,.0,.2,1) forwards);
   
   h1, h2 { margin: 0 }
 
@@ -108,7 +110,7 @@ body > svg { display: none }
     li { display: inline-block }
 
     a {
-      padding: 1em;
+      padding: .8em;
       display: block;
     }
 
