--- a/styles/index.css
+++ b/styles/index.css
@@ -160,7 +160,8 @@ header.top {
   @media all and (min-width: 1200px) {
     header.top {
       margin: 0 7.5rem -2.5em;
-      transform: translateY(-2.5em); } }
+      position: relative;
+      top: -2.5em; } }
 
 .about {
   position: relative; }
@@ -244,20 +245,29 @@ section.practice {
   section.experience {
     margin: 0 7.5rem 0; } }
 
-@media all and (min-width: 650px) {
-  .currently,
-  .before {
-    display: inline-block;
-    width: 50%; } }
+section.experience small {
+  color: #b7b7b7; }
 
 .currently {
   background: #E6E6E3; }
   @media all and (min-width: 650px) {
     .currently {
-      float: left; } }
+      display: inline-block;
+      float: left;
+      width: 40%; } }
   @media all and (min-width: 1200px) {
     .currently {
       transform: translateY(-2.5em); } }
+
+.before p::first-letter {
+  line-height: 1em;
+  font-size: 250%;
+  font-style: italic; }
+
+@media all and (min-width: 650px) {
+  .before {
+    display: inline-block;
+    width: 60%; } }
 
 /* Bottom footer */
 footer.bottom {
@@ -265,4 +275,5 @@ footer.bottom {
   color: #FFFFFF; }
   @media all and (min-width: 1200px) {
     footer.bottom {
-      transform: translateY(2.5em); } }
+      position: relative;
+      bottom: -2.5em; } }
