--- a/styles/source/front.scss
+++ b/styles/source/front.scss
@@ -14,7 +14,9 @@ header.top {
 
   @media all and (min-width: 1200px) {
     margin: 0 $whitespace-em-medium -2.5em;
-    transform: translateY(-2.5em);
+    // transform: translateY(-2.5em);
+    position: relative;
+    top: -2.5em;
   }
 }
 
@@ -123,30 +125,38 @@ section.experience {
   @media all and (min-width: 1200px) {
     margin: 0 $whitespace-em-medium 0;
   }
+
+  small {
+    color: lighten($color-grey-dark, 50);
+  }
 }
 
-.currently,
-.before {
+.currently {
+  background: $color-grey-light;
+
   @media all and (min-width: 650px) {
     display: inline-block;
-    width: 50%;
+    float: left;
+    width: 40%;
+  }
+
+  @media all and (min-width: 1200px) {
+    transform: translateY(-2.5em);
   }
 }
 
-  .currently {
-    background: $color-grey-light;
-
-    @media all and (min-width: 650px) {
-      float: left;
-    }
-
-    @media all and (min-width: 1200px) {
-      transform: translateY(-2.5em);
-    }
+.before {
+  p::first-letter {
+    line-height: 1em;
+    font-size: 250%;
+    font-style: italic;
   }
 
-  .before {
+  @media all and (min-width: 650px) {
+    display: inline-block;
+    width: 60%;
   }
+}
 
 /* Bottom footer */
 
@@ -155,6 +165,8 @@ footer.bottom {
   color: $color-white;
 
   @media all and (min-width: 1200px) {
-    transform: translateY(2.5em);
+    // transform: translateY(2.5em);
+    position: relative;
+    bottom: -2.5em;
   }
 }
