--- a/styles/source/front.scss
+++ b/styles/source/front.scss
@@ -172,6 +172,10 @@ footer.bottom {
       float: left;
     }
 
+    a {
+      color: $color-white;
+    }
+
     span {
       display: block;
     }
