--- a/styles/index.css
+++ b/styles/index.css
@@ -75,33 +75,46 @@ th {
 /* Basics */
 body {
   background: #F5F5F5;
-  font-family: 'Noticia Text', serif;
+  font-family: "din-2014", sans-serif;
+  font-weight: 300;
   font-size: calc(16px + (19 - 16) * ((100vw - 420px) / (1200 - 420)));
   line-height: 1.68;
+  letter-spacing: 1px;
   color: #373737; }
   @media all and (min-width: 1200px) {
     body {
-      font-size: 18px; } }
+      font-size: 16px; } }
 
 /* Typography */
 h1,
 h2 {
+  font-family: 'acta-display', sans-serif;
+  font-weight: 800;
   font-style: italic;
-  font-family: 'Asap', sans-serif;
   line-height: 1.3; }
 
-h1 {
-  font-weight: 700; }
+h2,
+h3,
+h4 {
+  font-weight: inherit; }
 
 em {
-  font-style: italic; }
+  font-style: normal; }
 
-section a {
-  color: #373737; }
-  section a:hover, section a:active, section a:focus {
-    color: #FFFFFF;
-    background: #3B4E5B;
-    text-decoration: none; }
+section a,
+footer a {
+  color: #373737;
+  text-decoration: none;
+  border-bottom: 2px solid #E6E6E3;
+  font-weight: 600;
+  display: inline-block;
+  line-height: 1.3; }
+  section a:hover, section a:active, section a:focus,
+  footer a:hover,
+  footer a:active,
+  footer a:focus {
+    color: #F15A24;
+    border-bottom-color: #F15A24; }
 
 /* Main container */
 main {
@@ -128,7 +141,6 @@ main {
 /* Navigation */
 nav,
 small {
-  font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   font-size: 80%; }
 
@@ -176,7 +188,7 @@ header.top {
   font-size: 150%; }
   @media all and (min-width: 650px) {
     .title {
-      max-width: 11em; } }
+      max-width: 12.5em; } }
   @media all and (min-width: 1200px) {
     .title {
       font-size: 165%; } }
@@ -222,11 +234,12 @@ section.practice {
       padding: 0 15rem 2.5rem 5rem; } }
 
 .practice .description {
+  display: inline-block;
   color: #7B7E81;
   margin: 1em 0; }
   @media all and (min-width: 1200px) {
     .practice .description {
-      font-size: 80%;
+      font-size: 85%;
       text-align: right;
       margin: 0;
       width: 20%;
@@ -265,11 +278,6 @@ section.experience small {
     .currently {
       transform: translateY(-2.5em); } }
 
-.before p::first-letter {
-  line-height: 1em;
-  font-size: 250%;
-  font-style: italic; }
-
 @media all and (min-width: 650px) {
   .before {
     display: inline-block;
@@ -289,16 +297,22 @@ footer.bottom {
     footer.bottom .copyright {
       float: left; } }
   footer.bottom .copyright a {
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    border-bottom-color: #FFFFFF; }
   footer.bottom .copyright span {
     display: block; }
-  @media all and (min-width: 650px) {
-    footer.bottom .social {
-      float: right; } }
-  footer.bottom .social li {
-    margin-right: .5em;
-    display: inline-block; }
-  footer.bottom .icon {
-    width: 1.5em;
-    height: 1.5em;
-    fill: white; }
+  footer.bottom .social {
+    margin: 1em 0; }
+    @media all and (min-width: 650px) {
+      footer.bottom .social {
+        float: right;
+        margin: 0; } }
+    footer.bottom .social li {
+      margin-right: .5em;
+      display: inline-block; }
+    footer.bottom .social a {
+      border-bottom: 0; }
+    footer.bottom .social .icon {
+      width: 1.5em;
+      height: 1.5em;
+      fill: white; }
