--- a/styles/index.css
+++ b/styles/index.css
@@ -191,10 +191,11 @@ header.top {
   font-size: 150%; }
   @media all and (min-width: 650px) {
     .title {
-      max-width: 11.8em; } }
+      font-size: 160%;
+      max-width: 11.6em; } }
   @media all and (min-width: 1200px) {
     .title {
-      font-size: 180%; } }
+      font-size: 190%; } }
 
 .photo {
   display: none; }
